# misc

signing_service/misc_code/: test_pareto.cpp
simple_tetris/cpp/: CMakeLists.txt  README.md
simple_tetris/cpp/src/: board.hpp  compact_bitset.hpp  interactive.cpp  shapes.hpp  tests.cpp  tetris.cpp
simple_tetris/rust/: Cargo.toml  README.md
simple_tetris/rust/src/: board.rs  common.rs  main.rs  shape.rs
